[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://object/BG.tscn" type="PackedScene" id=2]
[ext_resource path="res://object/Cam.gd" type="Script" id=3]
[ext_resource path="res://object/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://font/NotoSansHans-Medium.otf" type="DynamicFontData" id=5]
[ext_resource path="res://object/TileParser.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]

size = 30
outline_size = 5
outline_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" parent="." instance=ExtResource( 2 )]

[node name="cam" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="cam"]
position = Vector2( 200, 0 )
current = true
limit_top = 0
limit_bottom = 640
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="item" type="Node2D" parent="."]

[node name="floorPlace" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 515.364, 175.814 )

[node name="uiLayer" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="Label" type="Label" parent="uiLayer"]
margin_left = 29.0
margin_top = 9.0
margin_right = 100.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "分数:"

[node name="Label2" type="Label" parent="uiLayer"]
margin_left = 29.0
margin_top = 61.0
margin_right = 100.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
text = "距离:"

[node name="Label3" type="Label" parent="uiLayer"]
margin_left = 27.0
margin_top = 109.0
margin_right = 98.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 1 )
text = "磁铁:"

[node name="Label4" type="Label" parent="uiLayer"]
margin_left = 28.0
margin_top = 156.0
margin_right = 99.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 1 )
text = "护盾:"

[node name="scoreLabel" type="Label" parent="uiLayer"]
margin_left = 117.0
margin_top = 9.0
margin_right = 188.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="distanceLabel" type="Label" parent="uiLayer"]
margin_left = 117.0
margin_top = 60.0
margin_right = 188.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="magnentLabel" type="Label" parent="uiLayer"]
margin_left = 117.0
margin_top = 108.0
margin_right = 188.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="shieldLabel" type="Label" parent="uiLayer"]
margin_left = 117.0
margin_top = 156.0
margin_right = 188.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="TileParser" parent="." instance=ExtResource( 6 )]

